<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/image_style"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/images23"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".Playlist">

        <TextView
            android:id="@+id/playlist_text_view"
            style="@style/styleTextView"
            android:layout_marginBottom="20dp"
            android:text="@string/playlist_text" />

        <TextView
            android:id="@+id/best_hits"
            style="@style/Playlist_Category_Style"
            android:text="@string/Best_Hits_Playlist" />

        <TextView
            android:id="@+id/soundtracks"
            style="@style/Playlist_Category_Style"
            android:text="@string/Soundtracks_Playlist" />

        <TextView
            android:id="@+id/rock"
            style="@style/Playlist_Category_Style"
            android:text="@string/Rock_Songs_Playlist" />


        <TextView
            android:id="@+id/rap"
            style="@style/Playlist_Category_Style"
            android:text="@string/Rap_Songs_Playlist" />

        <TextView
            android:id="@+id/hiphop"
            style="@style/Playlist_Category_Style"
            android:text="@string/Hip_Hop_Songs_Playlist" />

        <TextView
            android:id="@+id/add_playlist"
            style="@style/Add_Playlist_Category_Style"
            android:text="@string/Add_Playlist" />


        <SeekBar
            android:id="@+id/seek_bar"
            style="@style/seekBar" />

        <LinearLayout
            android:id="@+id/player"
            style="@style/playerLayout"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                style="@style/playerButtons"
                android:contentDescription="@string/contentDescription_player"
                android:src="@drawable/ic_skip_previous_white_48dp" />

            <ImageView
                android:id="@+id/imageView"
                style="@style/playerButtons.Play"
                android:contentDescription="@string/contentDescription_player"
                android:src="@drawable/ic_play_02" />

            <ImageView
                android:id="@+id/imageView2"
                style="@style/playerButtons"
                android:contentDescription="@string/contentDescription_player"
                android:src="@drawable/ic_skip_next_white_48dp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>