<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/image_style"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/images23"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".Playing">

        <EditText
            android:id="@+id/music_search"
            style="@style/Search_Song_Artist_or_Album_Style"
            android:hint="@string/Search_Song_Artist_or_Album_text_description"
            android:inputType="text"
            android:orientation="vertical"
            android:textColorHint="@color/Search_Song_Artist_or_Album_text_color" />

        <TextView
            android:id="@+id/now_playing_text_view"
            style="@style/styleTextView"
            android:text="@string/search_description" />

        <TextView
            android:id="@+id/now_playing_text_view2"
            style="@style/styleTextView"
            android:layout_marginBottom="100dp"
            android:text="@string/search_text" />

        <SeekBar
            android:id="@+id/seek_bar"
            style="@style/seekBar" />

        <LinearLayout
            android:id="@+id/player"
            style="@style/playerLayout"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                style="@style/playerButtons"
                android:contentDescription="@string/contentDescription_player"
                android:src="@drawable/ic_skip_previous_white_48dp" />

            <ImageView
                android:id="@+id/imageView"
                style="@style/playerButtons.Play"
                android:contentDescription="@string/contentDescription_player"
                android:src="@drawable/ic_play_02" />

            <ImageView
                android:id="@+id/imageView2"
                style="@style/playerButtons"
                android:contentDescription="@string/contentDescription_player"
                android:src="@drawable/ic_skip_next_white_48dp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>